--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:background="#b8e986"
+        tools:context=".MainActivity" android:id="@+id/linearLayout" android:orientation="horizontal">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+            app:srcCompat="@mipmap/ic_note_add_black"
+            android:id="@+id/comment_button"
+            android:layout_weight="1"
+            android:layout_width="149dp"
+            android:layout_height="1235dp"
+            android:layout_marginLeft="15dp" android:visibility="visible" android:cropToPadding="false"
+    />
+
+    <ImageView
+            android:layout_height="match_parent"
+            app:srcCompat="@mipmap/smiley_happy"
+            android:id="@+id/happy_face"
+            android:layout_weight="1"
+            android:layout_width="match_parent" android:scaleType="center"/>
+
+    <ImageView
+            android:layout_width="163dp"
+            android:layout_height="1235dp"
+            app:srcCompat="@mipmap/ic_history_black"
+            android:id="@+id/history_button"
+            android:layout_marginRight="15dp"
+            android:layout_weight="1"/>
+</LinearLayout>
