--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#b8e986"
-    tools:context=".MainActivity"
+    tools:context=".controller.MainActivity"
     android:id="@+id/constraint_layout">
 
 
     <ImageView
         android:id="@+id/comment_button"
+        android:background="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -34,6 +35,7 @@
 
     <ImageView
         android:id="@+id/history_button"
+        android:background="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
