complete RecyclerView to show mood history

--- a/app/src/main/res/layout/history_layout.xml
+++ b/app/src/main/res/layout/history_layout.xml
@@ -5,18 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/history_constraint_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="120dp"
     android:background="#EAEAEA"
     android:orientation="vertical">
 
     <View
         android:id="@+id/history_view"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.17"
+        android:layout_height="120dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.6"
         tools:background="@color/light_sage" />
 
     <TextView
@@ -25,7 +23,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="Text"
-        android:textSize="20sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/history_view" />
@@ -36,9 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        app:layout_constraintBottom_toBottomOf="@id/history_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/history_view"
         app:layout_constraintTop_toTopOf="@id/history_view"
-        app:srcCompat="@mipmap/ic_comment_black_48px"/>
+        app:srcCompat="@mipmap/ic_comment_black_48px" />
 
 </android.support.constraint.ConstraintLayout>
