--- a/app/src/main/res/layout/history_layout.xml
+++ b/app/src/main/res/layout/history_layout.xml
@@ -6,7 +6,6 @@
     android:id="@+id/history_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:background="#EAEAEA"
     android:orientation="vertical">
 
     <View
@@ -15,14 +14,16 @@
         android:layout_height="120dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.8"
         tools:background="@color/light_sage" />
 
     <TextView
         android:id="@+id/history_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/mood_date"
         android:padding="8dp"
-        android:text="Text"
+        android:text="@string/Day"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
+        android:contentDescription="@string/comment_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/history_view"
         app:layout_constraintTop_toTopOf="@id/history_view"
