--- a/app/src/main/res/layout/history_recyclerview.xml
+++ b/app/src/main/res/layout/history_recyclerview.xml
@@ -7,6 +7,7 @@
         android:id="@+id/history_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:background="#EAEAEA"/>
 
 </LinearLayout>
