Clean code after lint analyzing and final modifications

--- a/app/src/main/res/layout/history_layout.xml
+++ b/app/src/main/res/layout/history_layout.xml
@@ -19,15 +19,18 @@
 
     <TextView
         android:id="@+id/history_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/mood_date"
         android:padding="8dp"
         android:text="@string/Day"
-        android:textSize="12sp"
+        android:textSize="10sp"
         android:textStyle="bold"
+        android:ellipsize="end"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/history_view" />
+        app:layout_constraintTop_toTopOf="@id/history_view"
+        app:layout_constraintEnd_toEndOf="@id/history_view"
+        tools:ignore="SmallSp" />
 
     <ImageView
         android:id="@+id/history_imageview"
