--- a/app/src/main/res/layout-v26/comment_dialog.xml
+++ b/app/src/main/res/layout-v26/comment_dialog.xml
@@ -18,7 +18,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="16dp"
         android:inputType="text"
-        android:autofillHints=""
-        tools:targetApi="o" />
+        android:importantForAutofill="no" />
 
 </android.support.constraint.ConstraintLayout>
